--- a/templates/assignment_submit_student.html
+++ b/templates/assignment_submit_student.html
@@ -4,7 +4,7 @@
 
 {% block extra_css %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/assignments.css') }}">
-<link rel="stylesheet" href="{{ url_for('static', filename='css/assignment_submit_student.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/teacher_course_base.css') }}">
 {% endblock %}
 
 {% block content %}
