--- a/templates/assignment_view_teacher.html
+++ b/templates/assignment_view_teacher.html
@@ -72,17 +72,11 @@
                             {% endif %}
                         </td>
                         <td>
-                            {% if student[3] %}
-                                <a href="{{ url_for('view_submission', course_code=course_code, assignment_id=assignment_id, submission_id=student[3]) }}" 
-                                   class="btn btn-primary btn-sm">
-                                    <i class="fas fa-eye"></i> View
+                            {% if student[5] is not none %}
+                                <a href="{{ url_for('grade_submission', course_code=course_code, assignment_id=assignment_id, submission_id=student[3]) }}" 
+                                    class="btn btn-success btn-sm">
+                                    <i class="fas fa-check"> Grade</i> 
                                 </a>
-                                {% if student[5] is none %}
-                                    <a href="{{ url_for('grade_submission', course_code=course_code, assignment_id=assignment_id, submission_id=student[3]) }}" 
-                                       class="btn btn-success btn-sm">
-                                        <i class="fas fa-check"></i> Grade
-                                    </a>
-                                {% endif %}
                             {% else %}
                                 <span class="text-muted">No submission</span>
                             {% endif %}
