--- a/templates/teacher_dashboard.html
+++ b/templates/teacher_dashboard.html
@@ -25,7 +25,11 @@
   <!-- Profile Section -->
   <div class="profile-section">
     <div class="profile-pic">
-      <i class="fas fa-user" style="font-size: 40px;"></i>
+      {% if profile_pic %}
+        <img src="{{ url_for('static', filename=profile_pic) }}" alt="Profile Picture" style="width: 100%; height: 100%; object-fit: cover;" onerror="this.onerror=null; this.parentElement.innerHTML='<i class=\'fas fa-user\' style=\'font-size: 40px;\'></i>';">
+      {% else %}
+        <i class="fas fa-user" style="font-size: 40px;"></i>
+      {% endif %}
     </div>
     <div class="profile-info">
       <h2>Welcome {{current_user.first_name}} {{current_user.last_name}}!</h2>
